--- a/Assignment_2.html
+++ b/Assignment_2.html
@@ -1,7 +1,7 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>Title</title>
+<title>Little Prince</title>
 </head>
 <body>
 <img src="img/littile_prince.jpg">
